# Dl-Nsu

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/: config_used.json  training_history.json
config/: train_config.yaml
scripts/: check_data.py  download_data.py  plot_metrics.py  test_dataloader.py  test_model.py  train.py
src/: dataset.py  model.py  train.py  utils.py  validate.py
